--- a/index.html
+++ b/index.html
@@ -95,11 +95,6 @@
                       </li>
                       <li>
                         <a href="#servicos-confecao-section" class="nav-link"
-                          >Complementos e Acessórios</a
-                        >
-                      </li>
-                      <li>
-                        <a href="#servicos-confecao-section" class="nav-link"
                           >Serviços de Confeção</a
                         >
                       </li>
@@ -200,7 +195,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-5 mb-5" data-aos="fade-up">
               <div class="mb-4">
                 <p>
                   No mercado de comércio de tecidos desde 1970, somos uma
@@ -213,7 +208,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up" data-aos-delay="">
+            <div class="col-lg-6 ml-auto" data-aos="fade-up">
               <img src="images/empresa.jpg" alt="Image" class="img-fluid" />
             </div>
           </div>
@@ -228,10 +223,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-6 mb-5" data-aos="fade-up">
               <img src="images/equipa.jpg" alt="Image" class="img-fluid" />
             </div>
-            <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="">
+            <div class="col-lg-5 ml-auto" data-aos="fade-up">
               <div class="mb-4">
                 <p>
                   Temos uma equipa de profissionais que lhe irão recebê-lo e
@@ -253,22 +248,28 @@
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-8 text-center">
-              <h2
-                class="section-title mb-3"
-                data-aos="fade-up"
-                data-aos-delay=""
-              >
-                Tecidos
-              </h2>
+              <h2 class="section-title mb-3" data-aos="fade-up">Tecidos</h2>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+            <div class="col-lg-6 mb-5" data-aos="fade-up">
               <div class="owl-carousel slide-one-item-alt">
-                <img src="images/slide1.jpg" alt="Image" class="img-fluid" />
-                <img src="images/slide2.jpg" alt="Image" class="img-fluid" />
-                <img src="images/slide3.jpg" alt="Image" class="img-fluid" />
+                <img
+                  src="images/tecidos_confecao_moda.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="images/tecidos_decoracao.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="images/servicos_confecao.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
               </div>
               <div class="custom-direction">
                 <a href="#" class="custom-prev"
@@ -278,11 +279,7 @@
                 ></a>
               </div>
             </div>
-            <div
-              class="col-lg-5 ml-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-lg-5 ml-auto" data-aos="fade-up">
               <div class="owl-carousel slide-one-item-alt-text">
                 <div>
                   <h2 class="section-title mb-3">Tecidos de Confeção e Moda</h2>
@@ -290,7 +287,7 @@
                     Na nossa loja pode encontrar uma grande variedade de tecidos
                     a metro de alta qualidade para todos os projetos de costura
                     a preços acessíveis, que o vão ajudar a libertar a sua
-                    criatividade…
+                    criatividade...
                   </p>
                   <a
                     href="#tecidos-confecao-section"
@@ -299,15 +296,15 @@
                   >
                 </div>
                 <div>
-                  <h2 class="section-title mb-3">
-                    Complementos de Confeção e Moda
-                  </h2>
+                  <h2 class="section-title mb-3">Tecidos de Decoração</h2>
                   <p class="lead">
-                    Se procura artigos e acessórios de costura, chegou ao sítio
-                    certo.
+                    Pensar numa solução de decoração completa e criativa na sua
+                    casa ou no seu negócio é tão simples como vir visitar-nos e
+                    escolher os seus tecidos e artigos preferidos com a ajuda da
+                    nossa equipa de profissionais...
                   </p>
                   <a
-                    href="#complementos-confecao-section"
+                    href="#tecidos-decoracao-section"
                     class="btn btn-primary smoothscroll"
                     >Saber mais</a
                   >
@@ -315,10 +312,8 @@
                 <div>
                   <h2 class="section-title mb-3">Serviços de Confeção</h2>
                   <p class="lead">
-                    Se imagina ver-se naquele fato ou vestido que lhe ficou na
-                    retina numa revista de moda que folheou ou se necessita de
-                    um traje ou fardamento para uma ocasião específica, tudo o
-                    que tem que fazer é vir falar conosco.
+                    Se procura artigos e acessórios de costura para a execução
+                    dos seus trabalhos de costura, chegou ao sítio certo.
                   </p>
                   <a
                     href="#servicos-confecao-section"
@@ -335,70 +330,74 @@
       <section class="site-section" id="tecidos-confecao-section">
         <div class="container">
           <div class="row containerRow">
-            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-5 mb-5" data-aos="fade-up">
               <div class="mb-4">
                 <h3 class="h3 mb-4 text-black">Tecidos de Confeção e Moda</h3>
                 <p>
                   Na nossa loja pode encontrar uma grande variedade de tecidos a
                   metro de alta qualidade para todos os projetos de costura a
                   preços acessíveis, que o vão ajudar a libertar a sua
-                  criatividade…
+                  criatividade:
                 </p>
                 <p>
-                  Dispomos de tecidos de confeção para os seus outfits
-                  favoritos: Os actuais tecidos da moda e de alta costura,
-                  lisos, axadrezados ou às riscas, com padrões florais,
-                  geométricos e abstratos em materiais como algodões, linhos,
-                  malhas, sedas, brocados, veludos, carpélios, licras, tecidos
-                  patchwork, adamascados… bem como dos acessórios de costura que
-                  necessitará para a realização das suas ideias!
+                  Os tecidos da moda e de alta costura, lisos, axadrezados ou às
+                  riscas, com padrões florais, geométricos e abstratos em
+                  materiais como algodões, linhos, malhas, sedas, brocados,
+                  veludos, carpélios, licras, tecidos patchwork, adamascados.
                 </p>
                 <p>
                   Para além disso encontrará também peles sintéticas e tecidos
-                  técnicos para utilizações especiais, como por exemplo feltro
-                  de trabalhos manuais ou tecidos repelentes de água, ou ainda
-                  as nossas fazendas temáticas – como os tecidos carnavalescos
-                  para a decoração ou execução de trajes de Carnaval
-                  (individuais ou para grupos), para que possa brilhar nas
-                  noites de folia ou nos desfiles carnavalescos!
+                  técnicos para utilizações especiais, como por exemplo feltros
+                  ou tecidos repelentes de água, ou ainda as nossas fazendas
+                  temáticas – como os tecidos carnavalescos para a execução de
+                  trajes de Carnaval.
                 </p>
               </div>
             </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up" data-aos-delay="">
-              <img src="images/slide1.jpg" alt="Image" class="img-fluid" />
+            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+              <img
+                src="images/tecidos_confecao_moda.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
       </section>
 
-      <section class="site-section" id="complementos-confecao-section">
+      <section class="site-section" id="tecidos-decoracao-section">
         <div class="container">
           <div class="row containerRow">
-            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-6 mb-5" data-aos="fade-up">
+              <img
+                src="images/tecidos_decoracao.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
+            </div>
+            <div class="col-lg-5 ml-auto" data-aos="fade-up">
               <div class="mb-4">
-                <h3 class="h3 mb-4 text-black">
-                  Complementos de Confeção e Moda
-                </h3>
+                <h3 class="h3 mb-4 text-black">Tecidos de Decoração</h3>
                 <p>
-                  Se procura artigos e acessórios de costura, chegou ao sítio
-                  certo.
+                  Pensar numa solução de decoração completa e criativa na sua
+                  casa ou no seu negócio é tão simples como vir visitar-nos e
+                  escolher os seus tecidos e artigos preferidos com a ajuda da
+                  nossa equipa de profissionais.
                 </p>
                 <p>
-                  Para além dos tecidos dispomos também de todo o equipamento e
-                  acessórios necessários para os seus trabalhos de costura tais
-                  como fechos de correr, linhas de costura e de bordar, agulhas,
-                  botões, etc.
+                  Dispomos de uma vasta gama de artigos têxteis, lisos e com
+                  padrões em estilos diversos, ideais para dar uma nova vida ao
+                  seu espaço e criar um ambiente personalizado e único sem
+                  grande esforço alterando colchas, edredons, mantas ou
+                  almofadas decorativas, toalhas, lençóis, cortinados, ou ainda
+                  sofás.
                 </p>
                 <p>
-                  Na nossa secção de artigos de retrosaria encontrará linhas de
-                  velo, fitas e passamanarias, franjas, galões e cordões,
-                  rendas, lantejoulas, aplicações de tecidos e outros acessórios
-                  de costura que ajudarão a concretizar as suas ideias!
+                  Para ambientes adequados a cada época do ano e a cada fase da
+                  vida também dispomos de tecidos temáticos infantis ou
+                  natalícios.
                 </p>
               </div>
-            </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up" data-aos-delay="">
-              <img src="images/slide2.jpg" alt="Image" class="img-fluid" />
             </div>
           </div>
         </div>
@@ -407,30 +406,34 @@
       <section class="site-section" id="servicos-confecao-section">
         <div class="container">
           <div class="row containerRow">
-            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-5 mb-5" data-aos="fade-up">
               <div class="mb-4">
                 <h3 class="h3 mb-4 text-black">Serviços de Confeção</h3>
                 <p>
-                  Se imagina ver-se naquele fato ou vestido que lhe ficou na
-                  retina numa revista de moda que folheou ou se necessita de um
-                  traje ou fardamento para uma ocasião específica, tudo o que
-                  tem que fazer é vir falar conosco.
+                  Se procura artigos e acessórios de costura para a execução dos
+                  seus trabalhos de costura, chegou ao sítio certo. Na nossa
+                  secção de artigos de retrosaria encontra fechos de correr,
+                  linhas de costura e de bordar, agulhas, botões, bem como
+                  linhas de velo, rendas, lantejoulas, aplicações de tecidos,
+                  fitas e passamanarias, franjas, galões e cordões, e outros
+                  acessórios para a confeção de artigos de vestuário e
+                  têxteis-lar.
                 </p>
                 <p>
-                  Temos uma equipa competente disponível para o aconselhar na
-                  escolha dos tecidos e um serviço de costura à altura das suas
-                  expectativas.
+                  Para além da confeção de artigos para decoração, também
+                  dispomos de serviço de confeção de todo o tipo de roupas por
+                  medida tais como roupas de cerimónia ou casuais, trajes
+                  temáticos ou batas e fardamentos para particulares, grupos ou
+                  empresas.
                 </p>
-                <p>
-                  Confecionamos todo o tipo de roupas por medida tais como
-                  roupas de cerimónia ou casuais, trajes temáticos ou batas e
-                  fardamentos para particulares, grupos ou empresas…
-                </p>
-                <p>Estamos prontos para o receber.</p>
               </div>
             </div>
-            <div class="col-lg-6 ml-auto" data-aos="fade-up" data-aos-delay="">
-              <img src="images/slide3.jpg" alt="Image" class="img-fluid" />
+            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+              <img
+                src="images/servicos_confecao.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
@@ -459,7 +462,7 @@
                   </p>
                   <p>
                     <a
-                      href="#tecidos-decoracao-section"
+                      href="#tecidos-decoracao1-section"
                       class="saberMainButton smoothscroll"
                       >Saber Mais</a
                     >
@@ -467,11 +470,7 @@
                 </div>
               </div>
             </div>
-            <div
-              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
               <div class="unit-4">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary flaticon-graphic-design"></span>
@@ -521,11 +520,7 @@
               </div>
             </div>
 
-            <div
-              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
-              data-aos="fade-up"
-              data-aos-delay=""
-            >
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
               <div class="unit-4">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary flaticon-graphic-design"></span>
@@ -547,11 +542,7 @@
                 </div>
               </div>
             </div>
-            <div
-              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
               <div class="unit-4">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary flaticon-graphic-design"></span>
@@ -579,7 +570,7 @@
         </div>
       </section>
 
-      <section class="site-section bg-light" id="tecidos-decoracao-section">
+      <section class="site-section bg-light" id="tecidos-decoracao1-section">
         <div class="container">
           <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade">
@@ -587,11 +578,7 @@
             </div>
           </div>
           <div class="row">
-            <div
-              class="col-lg-auto mb-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-lg-auto mb-auto" data-aos="fade-up">
               <div class="mb-4">
                 <p>
                   Pensar numa solução de conforto completa e criativa na sua
@@ -639,11 +626,7 @@
             </div>
           </div>
           <div class="row">
-            <div
-              class="col-lg-auto mb-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-lg-auto mb-auto" data-aos="fade-up">
               <div class="mb-4">
                 <p>
                   Com os nossos artigos têxteis para o lar, pode acrescentar
@@ -685,11 +668,7 @@
             </div>
           </div>
           <div class="row">
-            <div
-              class="col-lg-auto mb-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-lg-auto mb-auto" data-aos="fade-up">
               <div class="mb-4">
                 <p>
                   Na nossa loja encontra todos os artigos e complementos para a
@@ -726,11 +705,7 @@
             </div>
           </div>
           <div class="row">
-            <div
-              class="col-lg-auto mb-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-lg-auto mb-auto" data-aos="fade-up">
               <div class="mb-4">
                 <p>
                   Na Beatriz dos Panos dispõe de serviços de decorações
@@ -775,11 +750,7 @@
             </div>
           </div>
           <div class="row">
-            <div
-              class="col-lg-auto mb-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-lg-auto mb-auto" data-aos="fade-up">
               <div class="mb-4">
                 <p>
                   A imagem de um empreendimento turístico ou de uma empresa deve
