Decoraca section done

--- a/index.html
+++ b/index.html
@@ -453,34 +453,11 @@
                   <span class="text-primary flaticon-graphic-design"></span>
                 </div>
                 <div>
-                  <h3>Tecidos de Decoração</h3>
-                  <p>
-                    Pensar numa solução de conforto completa e criativa na sua
-                    casa ou no seu negócio é tão simples como vir visitar-nos e
-                    escolher os seus tecidos e artigos preferidos com a ajuda da
-                    nossa equipa de profissionais...
-                  </p>
-                  <p>
-                    <a
-                      href="#tecidos-decoracao1-section"
-                      class="saberMainButton smoothscroll"
-                      >Saber Mais</a
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
-              <div class="unit-4">
-                <div class="unit-4-icon mr-4">
-                  <span class="text-primary flaticon-graphic-design"></span>
-                </div>
-                <div>
                   <h3>Artigos de Decoração</h3>
                   <p>
-                    Com os nossos artigos têxteis para o lar, pode acrescentar
-                    cores e texturas irresistíveis à sua casa, escritorio, loja
-                    ou empresa...
+                    Com os nossos artigos têxteis para decoração, pode
+                    acrescentar cores e texturas irresistíveis à sua casa, loja
+                    ou empresa, acrescentando magia ao ambiente!
                   </p>
                   <p>
                     <a
@@ -492,69 +469,17 @@
                 </div>
               </div>
             </div>
-            <div
-              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <div class="unit-4">
-                <div class="unit-4-icon mr-4">
-                  <span class="text-primary flaticon-graphic-design"></span>
-                </div>
-                <div>
-                  <h3>Complementos e Acessórios</h3>
-                  <p>
-                    Na nossa loja encontra todos os artigos e complementos para
-                    a confeção dos artigos para a sua casa ou para lhes dar um
-                    toque mais pessoal, tais como fitas e passamanarias,
-                    cordões, franjas, galões ou ainda rendas…
-                  </p>
-                  <p>
-                    <a
-                      href="#complementos-acessorios-section"
-                      class="saberMainButton smoothscroll"
-                      >Saber Mais</a
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-
             <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
               <div class="unit-4">
                 <div class="unit-4-icon mr-4">
                   <span class="text-primary flaticon-graphic-design"></span>
                 </div>
                 <div>
-                  <h3>Serviços de Decoração</h3>
+                  <h3>Hotelaria e Restauração</h3>
                   <p>
-                    Na Beatriz dos Panos dispõe de serviços de decorações
-                    personalizadas e aconselhamento, confeção e montagem de
-                    artigos para o seu lar ou para o seu negócio…
-                  </p>
-                  <p>
-                    <a
-                      href="#servicos-decoracao-section"
-                      class="saberMainButton smoothscroll"
-                      >Saber Mais</a
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
-              <div class="unit-4">
-                <div class="unit-4-icon mr-4">
-                  <span class="text-primary flaticon-graphic-design"></span>
-                </div>
-                <div>
-                  <h3>Hotéis e Instituições</h3>
-                  <p>
-                    A imagem de um empreendimento turístico ou de uma empresa
-                    deve refletir uma organização de sucesso de forma a ganhar
-                    terreno num mercado pautado pela concorrência feroz
-                    provocada pela conjuntura adversa do nosso mercado
-                    interno...
+                    Se procura uma decoração à sua medida e do seu negócio, nós
+                    somos a opção ideal para si com um excelente compromisso
+                    entre qualidade de serviço e preço.
                   </p>
                   <p>
                     <a
@@ -566,52 +491,25 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="site-section bg-light" id="tecidos-decoracao1-section">
-        <div class="container">
-          <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
-              <h3 class="h3 mb-4 text-black">Tecidos de Decoração</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-auto mb-auto" data-aos="fade-up">
-              <div class="mb-4">
-                <p>
-                  Pensar numa solução de conforto completa e criativa na sua
-                  casa ou no seu negócio é tão simples como vir visitar-nos e
-                  escolher os seus tecidos e artigos preferidos com a ajuda da
-                  nossa equipa de profissionais.
-                </p>
-                <p>
-                  Dispomos de uma vasta gama de artigos têxteis, lisos e com
-                  padrões em estilos diversos, ideais para renovar o seu espaço
-                  pessoal e criar um ambiente personalizado e único:
-                </p>
-                <p>
-                  Dê uma nova vida aos seus móveis sem grande esforço alterando
-                  colchas, edredons, mantas ou almofadas decorativas, que
-                  constituem uma alternativa natural à utilização constante de
-                  aquecimento nos dias frios de Inverno…
-                </p>
-                <p>
-                  Aqui encontra uma grande variedade de opções, lisos e com
-                  padrões, cores, estilos e materiais diversos para toalhas,
-                  lençóis, colchas, estores e cortinados, almofadas decorativas,
-                  mantas ou ainda sofás.
-                </p>
-                <p>
-                  Para decorações de ambientes adequados a cada época do ano e a
-                  cada fase da vida, que deve ser celebrada da melhor forma,
-                  ainda dispomos de tecidos temáticos para decoração: os tecidos
-                  infantis vão inspirá-lo a criar um mundo para o seu filho como
-                  sempre imaginou, combinando roupa de cama ou cortinados, e os
-                  tecidos de Natal irão proporcionar um ambiente natalício
-                  perfeito para o seu espaço…
-                </p>
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary flaticon-graphic-design"></span>
+                </div>
+                <div>
+                  <h3>Design de Interiores</h3>
+                  <p>
+                    Na Beatriz dos Panos não terá apenas uma equipa técnica apta
+                    a dar-lhe aconselhamento personalizado de decoração.
+                  </p>
+                  <p>
+                    <a
+                      href="#design-interiores-section"
+                      class="saberMainButton smoothscroll"
+                      >Saber Mais</a
+                    >
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -626,116 +524,27 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-auto mb-auto" data-aos="fade-up">
+            <div class="col-lg-6 mb-5" data-aos="fade-up">
+              <img
+                src="images/artigos_decoracao.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
+            </div>
+            <div class="col-lg-5 ml-auto" data-aos="fade-up">
               <div class="mb-4">
                 <p>
-                  Com os nossos artigos têxteis para o lar, pode acrescentar
-                  cores e texturas irresistíveis à sua casa, escritorio, loja ou
-                  empresa.
+                  Com os nossos artigos têxteis para decoração, pode acrescentar
+                  cores e texturas irresistíveis à sua casa, loja ou empresa,
+                  acrescentando magia ao ambiente!
                 </p>
                 <p>
-                  Dar conforto e vida ao seu espaço através de uma nova colcha,
-                  alcatifa ou tapete, acrescentar alguma magia ao ambiente com
-                  os nossos papéis de parede e abatjours decorativos ou regular
-                  a intensidade da luz, criando um ambiente mais acolhedor e
-                  harmonioso com os nossos cortinados, estores ou telas feitos
-                  por medida é uma missão fácil, pois disponibilizamos vários
-                  tipos de soluções e confecionamos uma vasta gama de artigos
-                  têxteis-lar de acordo com as suas necessidades.
+                  Oferecemos-lhe uma vasta gama de artigos têxteis-lar: toalhas,
+                  colchas e edredons (também em patchwork), almofadas
+                  decorativas, tapetes e alcatifas ou ainda abat-jours
+                  decorativos, cortinados ou estores, de acordo com as suas
+                  necessidades.
                 </p>
-                <p>
-                  Temos estores, telas e cortinados disponíveis em vários
-                  estilos, cores e materiais: De tecido (estilo japonês e
-                  veneziano), laminados verticais, estores de rolo e blackouts e
-                  dispomos de uma grande variedade de varões, cabos e calhas
-                  para a concretização destas e outras soluções – tudo com
-                  serviço de transporte e montagem.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section
-        class="site-section bg-light"
-        id="complementos-acessorios-section"
-      >
-        <div class="container">
-          <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
-              <h3 class="h3 mb-4 text-black">Complementos e Acessórios</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-auto mb-auto" data-aos="fade-up">
-              <div class="mb-4">
-                <p>
-                  Na nossa loja encontra todos os artigos e complementos para a
-                  confeção dos artigos para a sua casa ou para lhes dar um toque
-                  mais pessoal, tais como fitas e passamanarias, cordões,
-                  franjas, galões ou ainda rendas…
-                </p>
-                <p>
-                  Dispomos de gamas e estilos variados de calhas e varões (que
-                  cortamos ao comprimento desejado), para pendurar os seus
-                  cortinados, estores ou painéis e de serviços de decoração e
-                  aconselhamento para a concretização destas ou outras soluções.
-                </p>
-                <p>
-                  Pode também optar por uma solução de calhas duplas que lhe
-                  permitem combinar dois cortinados sobrepostos, de acordo com
-                  as necessidades de utilização de um espaço.
-                </p>
-                <p>
-                  Prestamos serviço de transporte e montagem. Venha
-                  consultar-nos!
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="site-section bg-light" id="servicos-decoracao-section">
-        <div class="container">
-          <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
-              <h3 class="h3 mb-4 text-black">Serviços de Decoração</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-auto mb-auto" data-aos="fade-up">
-              <div class="mb-4">
-                <p>
-                  Na Beatriz dos Panos dispõe de serviços de decorações
-                  personalizadas e aconselhamento, confeção e montagem de
-                  artigos para o seu lar ou para o seu negócio…
-                </p>
-                <p>
-                  Prestamos aconselhamento técnico de decoração e remodelação de
-                  interiores e confecionamos por medida vários tipos de artigos
-                  como toalhas, colchas e edredons, almofadas decorativas,
-                  tapetes e alcatifas ou ainda abatjours, bem como cortinados e
-                  estores interiores – desde os mais encorpados (que impedem a
-                  passagem da luz e tornam a sua casa mais acolhedora) aos mais
-                  leves (que permitem a entrada de luz solar preservando a
-                  privacidade do seu lar).
-                </p>
-                <p>
-                  Para além de regularem a intensidade da luz natural, os
-                  cortinados e os estores podem também ser soluções criativas,
-                  práticas e acessíveis para dividir divisões ou pequenos
-                  espaços de arrumação…
-                </p>
-                <p>
-                  Ainda executamos serviços de estofador, restauro, limpeza e
-                  impermeabilização, bem como trabalhos de patchwork para
-                  colchas e edredons, almofadas decorativas, estofos ou outros
-                  artigos, para que possa dar um toque de originalidade ao seu
-                  ambiente, tudo beneficiando do nosso aconselhamento técnico.
-                </p>
-                <p>Basta contactar-nos e pedir o seu orçamento grátis!</p>
               </div>
             </div>
           </div>
@@ -746,51 +555,68 @@
         <div class="container">
           <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade">
-              <h3 class="h3 mb-4 text-black">Hotéis e Instituições</h3>
+              <h3 class="h3 mb-4 text-black">Hotelaria e Restauração</h3>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-auto mb-auto" data-aos="fade-up">
+            <div class="col-lg-5 mb-5" data-aos="fade-up">
               <div class="mb-4">
                 <p>
-                  A imagem de um empreendimento turístico ou de uma empresa deve
-                  refletir uma organização de sucesso de forma a ganhar terreno
-                  num mercado pautado pela concorrência feroz provocada pela
-                  conjuntura adversa do nosso mercado interno.
-                </p>
-                <p>
-                  Numa área que trabalha o acolhimento, a decoração do seu
-                  espaço é tão importante como o design ou a arquitetura do
-                  mesmo, sendo uma missão de grande responsabilidade,
-                  tornando-se primordial maximizar a sensação de harmonia e
-                  bem-estar – uma parte importante da experiência que o cliente
-                  leva consigo…
-                </p>
-                <p>
-                  Se procura um aconselhamento de decoração à sua medida e do
-                  seu negócio, esta é a opção ideal para si, que lhe permite
-                  esclarecer as suas questões de decoração com um excelente
-                  compromisso entre qualidade de serviço e preço.
-                </p>
-                <p>
-                  Desenvolvemos serviços de decoração e aconselhamento de
-                  interiores para hotéis, restaurantes, empresas ou outros
-                  espaços comerciais, ou ainda para pequenos espaços como
-                  escritórios, salas de reuniões, recepções, salas de espera,
-                  entre outras.
+                  Se procura uma decoração à sua medida e do seu negócio, nós
+                  somos a opção ideal para si com um excelente compromisso entre
+                  qualidade de serviço e preço.
                 </p>
                 <p>
                   Confecionamos por medida batas e fardamentos, toalhas e
-                  guardanapos, abatjours, almofadas decorativas e rolos, colchas
-                  e edredons, tapetes e alcatifas, cortinados, estores, telas e
-                  blackouts, e dispomos de serviço de estofador, limpeza e
-                  impermeabilização. Tudo com serviço de transporte, colocação e
-                  montagem.
+                  guardanapos, abat-jours, almofadas decorativas e rolos,
+                  colchas e edredons, tapetes e alcatifas, cortinados, estores,
+                  telas e blackouts, e executamos serviços de estofador,
+                  restauro, limpeza e impermeabilização de almofadas, estofos ou
+                  outros artigos.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-6 ml-auto" data-aos="fade-up">
+              <img
+                src="images/hotelaria_restauracao.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="site-section bg-light" id="design-interiores-section">
+        <div class="container">
+          <div class="row mb-5">
+            <div class="col-12 text-center" data-aos="fade">
+              <h3 class="h3 mb-4 text-black">Design de Interiores</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 mb-5" data-aos="fade-up">
+              <img
+                src="images/design_interiores.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
+            </div>
+            <div class="col-lg-5 ml-auto" data-aos="fade-up">
+              <div class="mb-4">
+                <p>
+                  Na Beatriz dos Panos não terá apenas uma equipa técnica apta a
+                  dar-lhe aconselhamento personalizado de decoração.
                 </p>
                 <p>
-                  Estaremos presentes desde o primeiro momento até ao final do
-                  projecto… Consulte-nos.
+                  Dispomos também do serviço de design de interiores para
+                  habitações privadas, hotéis, restaurantes, empresas ou outros
+                  espaços comerciais. Projetamos o seu espaço de acordo com as
+                  suas necessidades e expectativas, estando presentes desde o
+                  primeiro momento até ao final do projeto, incluindo o serviço
+                  de transporte e entrega / montagem.
                 </p>
+                <p>Contacte-nos e peça o seu orçamento grátis!</p>
               </div>
             </div>
           </div>
